@@ -12,10 +12,8 @@
 ActiveRecord::Schema.define(:version => 20090125013728) do
 
   create_table "users", :force => true do |t|
-    t.string   "email"
-    t.string   "name"
-    t.string   "confirm_code"
-    t.datetime "confirmed_at"
+    t.string "email"
+    t.string "name"
   end
 
 end
